<resources>
    <string name="app_name">AyaYummly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- نصوص الـ Spinners -->
    <string-array name="categories_array">
        <item>Select Category</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
        <item>Drinks</item>
        <item>Snacks</item>
        <item>Salads</item>
        <item>Soups</item>
        <item>Baking</item>
        <item>Other...</item>
    </string-array>

    <string-array name="difficulties_array">
        <item>Select Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Expert</item>
        <item>Other...</item>
    </string-array>


    <string name="title_recipe">🍗 Creamy Chicken with Herbs</string>
    <string name="chef_name">🧑‍🍳 Aya Yummly</string>
    <string name="category_main_dish">🍽 Main Dish</string>

    <string name="prep_time">⏱ Prep: 10m</string>
    <string name="cook_time">🔥 Cook: 20m</string>
    <string name="total_time">🕒 Total: 30m</string>

    <string name="level_easy">⚡ Level: Easy</string>
    <string name="serves_two">🍽 Serves: 2</string>

    <string name="ingredients_title">🧂 Ingredients</string>
    <string name="ingredients_list">
        - 2 chicken breasts\n- 200 ml cream\n- Olive oil\n- Herbs\n- Parsley and tomatoes
    </string>

    <string name="steps_title">📖 Steps</string>
    <string name="steps_list">
        1. Season chicken.\n2. Cook in oil.\n3. Add cream.\n4. Simmer.\n5. Serve.
    </string>

    <string name="notes_title">🧑‍🍳 Chef Notes</string>
    <string name="notes_text">💡 Tip: Best served with white rice or mashed potatoes.</string>

    <string name="start_cooking">🚀 Start Cooking</string>

    <string name="desc_recipe_image">Recipe image</string>
    <string name="desc_favorite">Add to favorites</string>
    <string name="desc_share">Share recipe</string>
    <string name="cooking_tip">💡 Prep makes perfect!</string>

    <string name="placeholder_text"><![CDATA[
Good food = Good mood
(Math never lies)
A photo is missing,
but the flavor isn’t.
]]></string>



</resources>